# gitmetrics

./: README.md  daily_extraction_config.yaml  daily_summarization_config.yaml  monthly_extraction_config.yaml  project_definitions.yaml  pyproject.toml  traffic_project_definitions.yaml  weekly.yaml  weekly_extraction_config.yaml
.github/workflows/: daily_collection.yaml  daily_summarize.yaml  monthly_collection.yaml  traffic_collection.yaml  weekly_collection.yaml
gitmetrics/: __main__.py  consolidate.py  drive.py  summarize.py
